--- a/static/package.json
+++ b/static/package.json
@@ -5,7 +5,7 @@
   "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack --watch --mode development",
     "build": "webpack -p --progress"
   },
   "author": "Darius Cosden",
