--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ Flask-SQLAlchemy==2.3.2
 ItsDangerous==1.0.0
 Jinja2==2.10
 MarkupSafe==1.0
+python-slugify==1.2.6
 SQLAlchemy==1.2.12
+Unidecode==1.0.22
 Werkzeug==0.14.1
