--- a/static/package.json
+++ b/static/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "draft-js": "^0.10.5",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-quill": "^1.3.2",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
